--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,16 @@ a{
     background: #f07f799e;
 }
 
+
 @media (max-width: 992px){
     .zoom-rose-bold.flexible{
         background-color: unset;
+    }
+}
+
+@media (max-width: 576px){
+    .zoom-rose-bold{
+        font-size: unset;
     }
 }
 
@@ -274,7 +281,7 @@ a{
 
 .content-child{
     width: 50%;
-    /* font-size: 18px; */
+    font-size: 24px;
     font-weight: 300;
 }
 
@@ -514,6 +521,7 @@ video{
 }
 
 .graphics .center{
+    width: 30%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
