--- a/css/style.css
+++ b/css/style.css
@@ -583,8 +583,7 @@ html.lenis, html.lenis body {
 }
 
 video{
-    outline: none;
-    border: none;
+    background-color: #373737;
     top: 50% !important;
     height: 80%;
     object-fit: cover;
@@ -627,43 +626,6 @@ video::-webkit-media-controls-fullscreen-button {
     display: none !important;
 }
 
-/* Firefox */
-video::-moz-media-controls {
-    display: none !important;
-}
-
-video::-moz-media-controls-enclosure {
-    display: none !important;
-}
-
-video::-moz-media-controls-panel {
-    display: none !important;
-}
-
-video::-moz-media-controls-start-playback-button {
-    display: none !important;
-}
-
-video::-moz-media-controls-play-button {
-    display: none !important;
-}
-
-video::-moz-media-controls-mute-button {
-    display: none !important;
-}
-
-video::-moz-media-controls-timeline {
-    display: none !important;
-}
-
-video::-moz-media-controls-volume-slider {
-    display: none !important;
-}
-
-video::-moz-media-controls-fullscreen-button {
-    display: none !important;
-}
-
 /* General rule to hide controls in other browsers */
 video::-ms-media-controls {
     display: none !important;
@@ -685,7 +647,8 @@ video::-ms-media-controls {
 }
 
 .h-40{ /* Unresponsive */
-    height: 400px;
+    height: 300px;
+    margin-bottom: 100px;
 }
 
 
