--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 
 html,
@@ -25,11 +25,13 @@ body{
 
 
 *{
-    font-family: "Inter", sans-serif;
+    font-family: "Rubik", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scrollbar-width: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 a{
@@ -85,7 +87,16 @@ html.lenis, html.lenis body {
     width: 30% !important;
 }
 
-@media(max-width: 992px){
+.light{
+    font-weight: 300 !important;
+}
+
+.medium{
+    font-weight: 500 !important;
+}
+
+
+@media(max-width: 772px){
     .flexible{
         width: 90% !important;
         /* color: #f07f79; */
@@ -93,41 +104,26 @@ html.lenis, html.lenis body {
     }
 }
 
-/* #unique-warning-container .warning-firefox {
-    background-color: #f07f79;
-    color: #333;
-    padding: 15px;
-    border-radius: 5px;
-    margin: 20px;
-    font-family: Arial, sans-serif;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    z-index: 1000;
-}
-#unique-warning-container .warning button {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    margin-top: 10px;
-    cursor: pointer;
-    border-radius: 3px;
-    font-family: Arial, sans-serif;
-}
-#unique-warning-container .warning button:hover {
-    background-color: #555;
+#three-two,
+#three-three{
+    position: relative;
 }
 
-.dismiss-warning{
-    margin-top: 10px;
-    background-color: #555;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-} */
+.bottom-left{
+    position: absolute;
+    bottom: 5%;
+    left: 1%;
+    font-size: 21px !important;
+}
 
+@media (max-width: 1200px){
+    #eight .content-child{
+        width: 80%;
+    }
+}
+.content-container{
+    opacity: 0;
+}
 #eighteen-two,
 #four,
 #six,
@@ -315,9 +311,13 @@ html.lenis, html.lenis body {
     color: white;
 }
 
+/* XXL Devices */
+@media (min-width: 1400px) { 
+    
+}
 
 .content-container.single{
-    margin-top: 200px;
+    /* margin-top: 200px; */
     padding-right: 20px;
     align-items: start;
 }
@@ -372,6 +372,7 @@ html.lenis, html.lenis body {
     width: 50%;
     font-size: 24px;
     font-weight: 300;
+    line-height: 33px;
 }
 
 .content-child-30{
@@ -417,8 +418,8 @@ html.lenis, html.lenis body {
 
 .quote-general{
     position: absolute;
-    font-size: 24px;
-    font-weight: 600;
+    font-size: 32px;
+    font-weight: 700;
     color:#006579;
 }
 
@@ -434,8 +435,8 @@ html.lenis, html.lenis body {
     position: absolute;
     top: -5px;
     left: -5px;
-    width: 100%;
-    height: 35px;
+    width: 101%;
+    height: 69px;
     background: #FFDAD7;    
     z-index: -1;
 }
@@ -471,7 +472,7 @@ html.lenis, html.lenis body {
 
 .quote-general .source{
     font-weight: 300;
-    font-size: 12px;
+    font-size: 32px;
     float: right;
 }
 
@@ -760,7 +761,7 @@ video::-ms-media-controls {
 
 .daniel-video{
     top: 20% !important;
-    height: 90% !important;
+    height: 70% !important;
     object-fit: contain;
 }
 
@@ -913,9 +914,9 @@ video::-ms-media-controls {
 }
 
 .graphics .center-right-text{
-    top: 50%; 
-    right: 15%;
-    width: 30%;
+    top: 30%; 
+    right: 6%;
+    width: 29%;
 }
 
 
@@ -1059,6 +1060,11 @@ video::-ms-media-controls {
 
 .warning * {
     margin-top: 50px;
+    font-size: 30px;
+}
+
+.warning h2{
+    font-size: 40px;
 }
 
 .warning a{
