--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,20 @@ html.lenis, html.lenis body {
     background: #f07f799e;
 }
 
+.recolor-m{
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    paint-order: stroke;
+    color: #dfdfdf;
+}
+
+@media(max-width: 576px){
+    .recolor-m{
+        font-size: 16px;
+    }
+}
 
 @media (max-width: 992px){
-    .recolor-m{
-        color: black;
-    }
     .zoom-rose-bold.flexible{
         background-color: unset;
     }
@@ -544,18 +553,25 @@ html.lenis, html.lenis body {
     position: relative;
 }
 
-@media (max-width: 768px){
-    .content-child.image-with-caption.quote{
-        width: 68%;
-    }
-}
-
 @media (max-width: 992px){
     .content-child.image-with-caption.quote{
         transform: translateY(-100px);
         background-color: unset;
     }
 }
+
+@media (max-width: 768px){
+    .content-child.image-with-caption.quote{
+        width: 68%;
+    }
+}
+
+@media (max-width: 576px){
+    .content-child.image-with-caption.quote{
+        width: 50%;
+    }
+}
+
 
 .content-child.image-with-caption.quote::after{
     content: "\201F";
